force-app/main/default/objects/Product__c/fields/Product_For__c.field-meta.xml
<CustomField>
    <fullName>Product_For__c</fullName>
    <label>Product For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avana Products</fullName>
            </value>
            <value>
                <fullName>Emmbi Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>