force-app/main/default/objects/Product__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Groups</valueSetName>
    </valueSet>
</CustomField>