force-app/main/default/objects/Product__c/fields/Unit_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Sale__c</fullName>
    <label>Unit of Sale</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Sale</valueSetName>
    </valueSet>
</CustomField>