force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Unit_of_Sale__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>